# assignment

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
data/: ground_truth.json
outputs/: task2_decisions.json  task3_analysis.json
scripts/: evaluate.py
src/: logger.py
src/config/: settings.py
src/db/: connection.py  models.py  repository.py
src/ingestion/: pipeline.py
src/novelty/: detector.py  models.py  prompts.py
src/retrieval/: hybrid.py  models.py  prompts.py  reranker.py
src/services/: embedding.py  llm.py
tests/services/: __init__.py
